@@ -1,20 +1,18 @@
 package Backend;
+
 import java.time.LocalDate;
 import java.time.format.DateTimeParseException;
+
 public class ExpenseValidator {
 
     private static final double MIN_AMOUNT = 1.00;
     private static final double MAX_AMOUNT = 1_000_000.00;
     private static final int MAX_DESCRIPTION_LENGTH = 100;
     private static final int MAX_DATETIME_LENGTH = 19;
-
-    
     private static final String DATE_FORMAT_PATTERN = "^\\d{4}-\\d{2}-\\d{2}$";
 
     public static boolean validate(Expense expense) {
-        if (expense == null) {
-            return false;
-        }
+        if (expense == null) return false;
 
         return isIdValid(expense.getExpenseId())
                 && isIdValid(expense.getUserId())
@@ -25,7 +23,17 @@ public class ExpenseValidator {
                 && isCreatedAtValid(expense.getCreatedAt());
     }
 
-    
+    public static boolean validateNewExpense(Expense expense) {
+        if (expense == null) return false;
+
+        return isIdValid(expense.getUserId())
+                && isIdValid(expense.getCategoryId())
+                && isAmountValid(expense.getAmount())
+                && isDescriptionValid(expense.getDescription())
+                && isExpenseDateValid(expense.getExpenseDate())
+                && isCreatedAtValid(expense.getCreatedAt());
+    }
+
     public static boolean isIdValid(int id) {
         return id > 0;
     }
@@ -34,9 +42,8 @@ public class ExpenseValidator {
         return (amount >= MIN_AMOUNT && amount <= MAX_AMOUNT);
     }
 
-    
     public static boolean isDescriptionValid(String description) {
-        if (description == null || description.trim().isEmpty() || description.length() > MAX_DESCRIPTION_LENGTH) {
+        if (description == null || description.isBlank() || description.length() > MAX_DESCRIPTION_LENGTH) {
             return false;
         }
 
@@ -46,29 +53,24 @@ public class ExpenseValidator {
                 && !description.contains("`");
     }
 
-
     public static boolean isExpenseDateValid(String date) {
-        if(date == null || date.trim().isEmpty()|| !date.matches(DATE_FORMAT_PATTERN)){
+        if (date == null || date.isBlank() || !date.matches(DATE_FORMAT_PATTERN)) {
             return false;
         }
-        
-        try{
-            LocalDate parseDate = LocalDate.parse(date);
-            
-            int month = parseDate.getMonthValue();
-            int day = parseDate.getDayOfMonth();
-            
+
+        try {
+            LocalDate parsed = LocalDate.parse(date);
+            int month = parsed.getMonthValue();
+            int day = parsed.getDayOfMonth();
             return (month >= 1 && month <= 12) && (day >= 1 && day <= 31);
-        }
-        
-        catch (DateTimeParseException e) {
+        } catch (DateTimeParseException e) {
             return false;
         }
     }
 
     public static boolean isCreatedAtValid(String dateTime) {
         return dateTime != null
-                && !dateTime.trim().isEmpty()
+                && !dateTime.isBlank()
                 && dateTime.length() <= MAX_DATETIME_LENGTH;
     }
 
